# hcli_hag

./: .gitignore  .pyproject.toml.swp  CHANGELOG  LICENSE.txt  MANIFEST.in  README.rst  manage.py  pyproject.toml  requirements.txt
.circleci/: config.yml
hcli_hag/: __init__.py  __main__.py  config.py  gitserver.py  logger.py  package.py  server.py
hcli_hag/cli/: cli.py  config.py  hag.py  logger.py  proxy.py  template.json
hcli_hag/cli/utils/: formatting.py
hcli_hag/cli/wsgiapp/: wsgiapp.py
hcli_hag/data/: hcli_hag.1
hcli_vibe/: __main__.py  config.py  package.py
hcli_vibe/cli/: cli.py  config.py  logger.py  repo.py  runner.py  service.py  template.json
hcli_vibe/data/: hcli_vibe.1
repos/new.git/objects/pack/: pack-59ebdb0ab7c97655ac61f48de14d8cdd3a092027.idx  pack-59ebdb0ab7c97655ac61f48de14d8cdd3a092027.pack
repos/new.git/refs/heads/: master
