[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcli_hag"
dynamic = ["version", "dependencies"]
description="HCLI hag is a python package wrapper that contains an HCLI sample application (hag); hag is git's companion; a WSGI host service and hcli to work with remote git repositories."
readme = "README.rst"
authors = [{name = "Jeff Michaud", email = "cometaj2@proton.me"}]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["hag", "git", "code", "repo", "cli", "client", "server", "connector", "hypermedia", "rest", "generic", "development"]

[project.urls]
Homepage = "https://github.com/cometaj2/hcli_hag"

[project.scripts]
hcli_hag = "hcli_hag.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "hcli_hag.package.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools]
packages = ["hcli_hag",
            "hcli_hag.cli",
            "hcli_hag.data"]
include-package-data = true

[tool.setuptools.package-data]
"hcli_hag" = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "*.pyd", "__pycache__"]
